<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pgOneTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/purple_500"
        android:layout_marginTop="20sp"
        />

<!--    <Button-->
<!--        android:id="@+id/btnClick"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/btnTxt"-->
<!--        android:textSize="15sp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginHorizontal="15dp"-->
<!--         />-->

    <TextView
        android:id="@+id/tvMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMiles"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:labelFor="@id/etEnterMiles"
        />

    <EditText
        android:id="@+id/etEnterMiles"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:layout_gravity="center_horizontal"

        />
    
    <TextView
        android:id="@+id/tvCarType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCarType"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
            <RadioGroup
                android:id="@+id/radioGroupCars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                >
                <RadioButton
                    android:id="@+id/rbSmartCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smartCar"
                    />
                <RadioButton
                    android:id="@+id/rbSedan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sedan"
                    />
                <RadioButton
                    android:id="@+id/rbMinivan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minivan"
                    />
                
            </RadioGroup>

    </LinearLayout>
    
    <Button
        android:id="@+id/btnEstimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEstimate"
        android:layout_marginTop="20sp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>